@@ -1,7 +1,7 @@
 super-sed version @VERSION@
 based on GNU sed version @SED_FEATURE_VERSION@
 
-Copyright (C) 2003 Free Software Foundation, Inc.
+Copyright (C) @COPYRIGHT_YEAR@ Free Software Foundation, Inc.
 This is free software; see the source for copying conditions.  There is NO
 warranty; not even for MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE,
 to the extent permitted by law.
